Finished importing exisiting resume

--- a/cv.html
+++ b/cv.html
@@ -33,7 +33,7 @@
             <section class="row">
                  <h3 class="col-md-3"><span class="fa fa-fw fa-user"></span>&nbsp;A propos</h3>
                 <div class="col-md-9">Ingénieur et professeur agrégé d&#39;informatique, j&#39;enseigne en BTS
-                    SIO et en école d&#39;ingénieur à Lyon. Je suis également formateur académique
+                    SIO et en école d&#39;ingénieurs à Lyon. Je suis également formateur académique
                     et auteur de cours en ligne.</div>
             </section>
             <hr>
@@ -109,22 +109,6 @@
             </h4>
                     </div>
                     <div class="row">
-                         <h4 class="col-md-3"><strong>Réseau</strong></h4>
-                         <h4 class="col-md-9">
-
-                  <span class="label label-primary">OSI</span>
-
-                  <span class="label label-primary">Ethernet</span>
-
-                  <span class="label label-primary">TCP/IP</span>
-
-                  <span class="label label-primary">xDSL</span>
-
-                  <span class="label label-primary">Cryptographie</span>
-
-            </h4>
-                    </div>
-                    <div class="row">
                          <h4 class="col-md-3"><strong>Projet</strong></h4>
                          <h4 class="col-md-9">
 
@@ -140,111 +124,76 @@
 
             </h4>
                     </div>
+                    <div class="row">
+                         <h4 class="col-md-3"><strong>Réseau</strong></h4>
+                         <h4 class="col-md-9">
+
+                  <span class="label label-primary">OSI</span>
+
+                  <span class="label label-primary">Ethernet</span>
+
+                  <span class="label label-primary">TCP/IP</span>
+
+                  <span class="label label-primary">xDSL</span>
+
+                  <span class="label label-primary">Cryptographie</span>
+
+            </h4>
+                    </div>
                 </div>
             </section>
             <hr>
             <section class="row">
                  <h3 class="col-md-3"><span class="fa fa-fw fa-building"></span>&nbsp;Expérience</h3>
                 <div class="col-md-9">
-                     <h4><strong>Head Code Ninja</strong>, <a href="https://area52.io/does-not-exist">Area 52</a></h4>2013-09&mdash;2016-02
-                    <p>Development team manager for <a href="https://en.wikipedia.org/wiki/Vaporware"><strong>Quantum Diorama</strong></a>,
-                        a distributed molecular modeling and analysis suite for Linux and OS X.</p>
+                     <h4><strong>Enseignant en informatique</strong>, Education Nationale</h4>2006-09&mdash;2016-02
+                    <p>Professeur en BTS IG puis SIO option SLAM : bases de la programmation,
+                        programmation orientée objet, développement Web et mobile, projet logiciel.</p>
                     <ul>
-                        <li>Managed a 5-person development team</li>
-                        <li>Accomplishment 2</li>
-                        <li>Etc.</li>
+                        <li>Lauréat du CAPET en 2005</li>
+                        <li>Major de l&#39;agrégation en 2008</li>
+                        <li>Formateur académique depuis 2014</li>
+                        <li>Membre du jury du CAPET interne depuis 2016</li>
+                        <li>Intervenant en école d&#39;ingénieurs à <a href="http://polytech.univ-lyon1.fr/">Poytech Lyon</a> depuis
+                            2009 et à <a href="https://www.sciencespo-lyon.fr/">Ssiences Po Lyon</a> en
+                            2009/2010</li>
                     </ul>
                     <div>&nbsp;</div>
-                     <h4><strong>Principal Developer</strong>, <a href="https://en.wikipedia.org/wiki/Better_Off_Ted#Plot">Veridian Dynamics</a></h4>2011-07&mdash;2013-08
-                    <p>Developer on numerous projects culminating in technical lead role for
-                        the <a href="http://betteroffted.wikia.com/wiki/Jabberwocky">Jabberwocky project</a> and
-                        promotion to principal developer.</p>
+                     <h4><strong>Ingénieur informaticien</strong>, <a href="http://www.artal.fr/">Artal</a></h4>1999-09&mdash;2006-08
+                    <p>Fonctions occupées : développeur, concepteur, architecte logiciel, responsable
+                        technique, chef de projet.</p>
                     <ul>
-                        <li>Managed a 5-person development team</li>
-                        <li>Accomplishment 2</li>
-                        <li>Etc.</li>
+                        <li><a href="https://www.alcatel-lucent.com/fr">Alcatel Space</a> - projets
+                            LMO2 et eCMS : test de charge utile satellite, supervision de trafic antenne</li>
+                        <li><a href="http://www.airbus.com/">Airbus</a> - projet TARDIS : gestion des
+                            données de soufflerie avion</li>
+                        <li><a href="http://www.space-airbusds.com/">Astrium</a> - projets BIBOG, SIFEC
+                            et SOC : composants du centre de contrôle du satellite Hélios II</li>
                     </ul>
-                    <div>&nbsp;</div>
-                     <h4><strong>IT Administrator</strong>, Stark Industries</h4>2008-10&mdash;2011-06
-                    <p>Junior programmer with heavy code responsibilities. Promoted to intermediate
-                        role after 6 months.</p>
-                    <ul>
-                        <li>Promoted to intermediate developer after 6 months</li>
-                        <li>Accomplishment 2</li>
-                        <li>Etc.</li>
-                    </ul>
-                    <div>&nbsp;</div>
-                     <h4><strong>Intern</strong>, Dunder Mifflin</h4>2008-06&mdash;2008-09
-                    <p>Performed IT administration and deployments for Dunder Mifflin.</p>
-                    <ul>
-                        <li>Supervised roll-out of Dunder Mifflin Infinity website.</li>
-                        <li>Performed mission-critical system backups and</li>
-                        <li>Etc.</li>
-                    </ul>
-                </div>
-            </section>
-            <hr>
-            <section class="row">
-                 <h3 class="col-md-3"><span class="fa fa-fw fa-star"></span>&nbsp;Projects</h3>
-                <div class="col-md-9">
-                     <h4><strong>contributor</strong>, <a href="http://please.hackmyresume.com">HackMyResume</a></h4>2015-09&mdash;2016-02
-                    <p>Exemplar user for HackMyResume and FluentCV!</p>
-                    <div>&nbsp;</div>
-                     <h4><strong>co-creator</strong>, <a href="http://project.website.com">Augmented Android</a></h4>2012-02&mdash;2014-01
-                    <p>Performed flagship product conceptualization and development.</p>
-                    <div>&nbsp;</div>
-                     <h4><strong>creator</strong>, <a href="http://myblog.jane.com/blog">Blog</a></h4>&mdash;
-                    <p>Conceptualization, design, development, and deployment.</p>
-                </div>
-            </section>
-            <hr>
-            <section class="row">
-                 <h3 class="col-md-3"><span class="fa fa-fw fa-pencil"></span>&nbsp;Samples</h3>
-                <div class="col-md-9">
-                     <h4><strong></strong>, <a href="http://janef.me/asteroids">Asteroids</a></h4>&mdash;
-                    <p>A browser-based space shooter built on Three.js.</p>
-                    <div>&nbsp;</div>
-                     <h4><strong></strong>, <a href="https://rememberpedia.com">Rememberpedia</a></h4>&mdash;
-                    <p>A website to help you remember things.</p>
                 </div>
             </section>
             <hr>
             <section class="row">
                  <h3 class="col-md-3"><span class="fa fa-fw fa-mortar-board"></span>&nbsp;Formation</h3>
                 <div class="col-md-9">
-                     <h4><strong></strong>, <a href="https://www.cornell.edu/">Cornell University</a></h4>2005-09&mdash;2008-05
+                     <h4><strong>Ingénieur en informatique</strong>, <a href="http://www.ensiie.fr">ENSIIE</a></h4>
+                     <h5>Evry, FR</h5>1996-09&mdash;1999-07
                     <ul>
-                        <li>Course 1</li>
-                        <li>Course 2</li>
-                        <li>Course 2</li>
+                        <li>École d’ingénieurs recrutant sur le concours Mines-Telecom</li>
+                        <li>Spécialisations en développement objet et intelligence artificielle</li>
                     </ul>
                     <div>&nbsp;</div>
-                     <h4><strong></strong>, <a href="https://en.wikipedia.org/wiki/Medfield_College">Medfield College</a></h4>2003-09&mdash;2005-06
+                     <h4><strong>Classes préparatoires aux grandes écoles</strong>, <a href="http://lgcorneille-lyc.spip.ac-rouen.fr">Lycée Pierre Corneille</a></h4>
+                     <h5>Rouen, FR</h5>1994-09&mdash;1996-07
                     <ul>
-                        <li>Course 1</li>
-                        <li>Course 2</li>
-                        <li>Course 2</li>
-                    </ul>
-                </div>
-            </section>
-            <hr>
-            <section class="row">
-                 <h3 class="col-md-3"><span class="fa fa-fw fa-child"></span>&nbsp;Service</h3>
-                <div class="col-md-9">
-                     <h4><strong>Technical Consultant</strong>, <a href="http://technology-for-tots.org">Technology for Tots</a></h4>2003-11&mdash;2005-06
-                    <p>Summary of this volunteer stint.</p>
-                    <ul>
-                        <li>Accomplishment 1</li>
-                        <li>Accomplishment 2</li>
-                        <li>etc</li>
+                        <li>Math Sup</li>
+                        <li>Math Spé M</li>
                     </ul>
                     <div>&nbsp;</div>
-                     <h4><strong>NCO</strong>, <a href="http://www.usar.army.mil/">US Army Reserves</a></h4>1999-11&mdash;2003-06
-                    <p>Summary of this military stint.</p>
+                     <h4><strong>Baccalauréat C</strong>, <a href="http://ango-lyc.spip.ac-rouen.fr">Lycée Jehan Ango</a></h4>
+                     <h5>Dieppe, FR</h5>1992-09&mdash;1994-07
                     <ul>
-                        <li>Accomplishment 1</li>
-                        <li>Accomplishment 2</li>
-                        <li>etc</li>
+                        <li>Mention Bien</li>
                     </ul>
                 </div>
             </section>
@@ -252,19 +201,13 @@
             <section class="row">
                  <h3 class="col-md-3"><span class="fa fa-fw fa-pencil"></span>&nbsp;Publications</h3>
                 <div class="col-md-9">
-                     <h4><a href="http://codeproject.com/build-ui-electron-atom.aspx"><strong>Building User Interfaces with Electron and Atom</strong></a>, Code Project</h4>Published on: 2011-01
+                     <h4><a href="https://www.gitbook.com/book/bpesquet/guide-developpeur-php/details"><strong>Guide du développeur PHP</strong></a>, GitBook</h4>Published on: 2016-01
                     <div>&nbsp;</div>
-                     <h4><a href="http://janef.me"><strong>Jane Fullstacker&amp;#39;s Blog</strong></a>, self</h4>Published on: 2011-01
+                     <h4><a href="https://openclassrooms.com/courses/apprenez-a-coder-avec-javascript"><strong>Apprenez à coder avec JavaScript</strong></a>, OpenClassrooms</h4>Published on: 2015-10
                     <div>&nbsp;</div>
-                     <h4><a href="http://url.to.publication.com/blah"><strong>Teach Yourself GORFF in 21 Days</strong></a>, Amazon</h4>Published on: 2008-01</div>
-            </section>
-            <hr>
-            <section class="row">
-                 <h3 class="col-md-3"><span class="fa fa-fw fa-trophy"></span>&nbsp;Awards</h3>
-                <div class="col-md-9">
-                     <h4><strong>Honorable Mention</strong>, Google</h4>Current
+                     <h4><a href="https://openclassrooms.com/courses/evoluez-vers-une-architecture-php-professionnelle"><strong>Evoluez vers une architecture PHP professionnelle</strong></a>, OpenClassrooms</h4>Published on: 2015-02
                     <div>&nbsp;</div>
-                     <h4><strong>Summa cum laude</strong>, Cornell University</h4>Current</div>
+                     <h4><a href="https://www.gitbook.com/book/bpesquet/guide-developpeur-php/details"><strong>Programmation orientée objet en C#</strong></a>, GitBook</h4>Published on: 2014-02</div>
             </section>
         </div>
     </body>
