--- a/index.html
+++ b/index.html
@@ -147,16 +147,20 @@
                  <h3 class="col-md-3"><span class="fa fa-fw fa-building"></span>&nbsp;Expérience</h3>
                 <div class="col-md-9">
                      <h4><strong>Enseignant en informatique</strong>, Education Nationale</h4>2006-09&mdash;2016-02
-                    <p>Professeur en BTS IG puis SIO option SLAM : bases de la programmation,
-                        programmation orientée objet, développement Web et mobile, projet logiciel.</p>
+                    <p>Professeur en BTS IG puis BTS SIO option SLAM : bases de la programmation,
+                        programmation orientée objet, développement Web et mobile, projet logiciel,
+                        bases de données.</p>
                     <ul>
-                        <li>Lauréat du CAPET en 2005</li>
+                        <li>Etablissements : <a href="http://www.lycee-mathias.fr/">lycée Mathias</a> à
+                            Chalon sur Saône en 2006, <a href="http://douanier-rousseau.paysdelaloire.e-lyco.fr/">lycée Douanier Rousseau</a> à
+                            Laval de 2007 à 2009, <a href="http://www.martiniere-duchere.fr/">lycée La Martinière Duchère</a> à
+                            Lyon depuis 2009</li>
                         <li>Major de l&#39;agrégation en 2008</li>
-                        <li>Formateur académique depuis 2014</li>
-                        <li>Membre du jury du CAPET interne depuis 2016</li>
                         <li>Intervenant en école d&#39;ingénieurs à <a href="http://polytech.univ-lyon1.fr/">Poytech Lyon</a> depuis
                             2009 et à <a href="https://www.sciencespo-lyon.fr/">Ssiences Po Lyon</a> en
-                            2009/2010</li>
+                            2009</li>
+                        <li>Formateur académique depuis 2014</li>
+                        <li>Membre du jury du CAPET interne depuis 2016</li>
                     </ul>
                     <div>&nbsp;</div>
                      <h4><strong>Ingénieur informaticien</strong>, <a href="http://www.artal.fr/">Artal</a></h4>1999-09&mdash;2006-08
