--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
             <section class="row">
                  <h3 class="col-md-3"><span class="fa fa-fw fa-user"></span>&nbsp;A propos</h3>
                 <div class="col-md-9">Ingénieur et professeur agrégé d&#39;informatique, j&#39;enseigne en BTS
-                    SIO et en école d&#39;ingénieurs à Lyon. Je suis également formateur académique
-                    et auteur de cours en ligne.</div>
+                    SIO et en école d&#39;ingénieurs à Lyon.</div>
             </section>
             <hr>
             <section class="row">
@@ -134,10 +133,6 @@
 
                   <span class="label label-primary">TCP/IP</span>
 
-                  <span class="label label-primary">xDSL</span>
-
-                  <span class="label label-primary">Cryptographie</span>
-
             </h4>
                     </div>
                 </div>
@@ -156,7 +151,7 @@
                             Laval de 2007 à 2009, <a href="http://www.martiniere-duchere.fr/">lycée La Martinière Duchère</a> à
                             Lyon depuis 2009</li>
                         <li>Major de l&#39;agrégation en 2008</li>
-                        <li>Intervenant en école d&#39;ingénieurs à <a href="http://polytech.univ-lyon1.fr/">Poytech Lyon</a> depuis
+                        <li>Intervenant à <a href="http://polytech.univ-lyon1.fr/">Poytech Lyon</a> depuis
                             2009 et à <a href="https://www.sciencespo-lyon.fr/">Ssiences Po Lyon</a> en
                             2009</li>
                         <li>Formateur académique depuis 2014</li>
