Add some details

--- a/index.html
+++ b/index.html
@@ -49,11 +49,9 @@
 
                   <span class="label label-primary">C++</span>
 
-                  <span class="label label-primary">C</span>
-
                   <span class="label label-primary">UML</span>
 
-                  <span class="label label-primary">Patterns</span>
+                  <span class="label label-primary">Design Patterns</span>
 
                   <span class="label label-primary">Multithreading</span>
 
@@ -111,7 +109,7 @@
                          <h4 class="col-md-3"><strong>Projet</strong></h4>
                          <h4 class="col-md-9">
 
-                  <span class="label label-primary">Agile</span>
+                  <span class="label label-primary">Agilité</span>
 
                   <span class="label label-primary">SCRUM</span>
 
@@ -141,10 +139,10 @@
             <section class="row">
                  <h3 class="col-md-3"><span class="fa fa-fw fa-building"></span>&nbsp;Expérience</h3>
                 <div class="col-md-9">
-                     <h4><strong>Enseignant en informatique</strong>, Education Nationale</h4>2006-09&mdash;2016-02
+                     <h4><strong>Enseignant en informatique</strong>, Education Nationale</h4>2006-09&mdash;2016-03
                     <p>Professeur en BTS IG puis BTS SIO option SLAM : bases de la programmation,
-                        programmation orientée objet, développement Web et mobile, projet logiciel,
-                        bases de données.</p>
+                        programmation orientée objet, architecture logicielle, développement Web
+                        et mobile, bases de données.</p>
                     <ul>
                         <li>Etablissements : <a href="http://www.lycee-mathias.fr/">lycée Mathias</a> à
                             Chalon sur Saône en 2006, <a href="http://douanier-rousseau.paysdelaloire.e-lyco.fr/">lycée Douanier Rousseau</a> à
@@ -180,13 +178,14 @@
                     <ul>
                         <li>École d’ingénieurs recrutant sur le concours Mines-Telecom</li>
                         <li>Spécialisations en développement objet et intelligence artificielle</li>
+                        <li>Stage de fin d&#39;études effectué à l&#39;<a href="https://www.irit.fr/">IRIT</a> de
+                            Toulouse : création d&#39;une équipe de robots footballeurs auto-organisés</li>
                     </ul>
                     <div>&nbsp;</div>
                      <h4><strong>Classes préparatoires aux grandes écoles</strong>, <a href="http://lgcorneille-lyc.spip.ac-rouen.fr">Lycée Pierre Corneille</a></h4>
                      <h5>Rouen, FR</h5>1994-09&mdash;1996-07
                     <ul>
-                        <li>Math Sup</li>
-                        <li>Math Spé M</li>
+                        <li>Math Sup / Math Spé M</li>
                     </ul>
                     <div>&nbsp;</div>
                      <h4><strong>Baccalauréat C</strong>, <a href="http://ango-lyc.spip.ac-rouen.fr">Lycée Jehan Ango</a></h4>
