--- a/index.html
+++ b/index.html
@@ -139,33 +139,36 @@
             <section class="row">
                  <h3 class="col-md-3"><span class="fa fa-fw fa-building"></span>&nbsp;Expérience</h3>
                 <div class="col-md-9">
-                     <h4><strong>Enseignant en informatique</strong>, Education Nationale</h4>2006-09&mdash;2016-03
-                    <p>Professeur en BTS IG puis BTS SIO option SLAM : bases de la programmation,
-                        programmation orientée objet, architecture logicielle, développement Web
-                        et mobile, bases de données.</p>
+                     <h4><strong>Enseignant en informatique</strong>, Education Nationale</h4>2006-09&mdash;2016-04
+                    <p>Principaux enseignements : bases de la programmation, programmation orientée
+                        objet, architecture logicielle, développement Web et mobile, bases de données.</p>
                     <ul>
-                        <li>Etablissements : <a href="http://www.lycee-mathias.fr/">lycée Mathias</a> à
-                            Chalon sur Saône en 2006, <a href="http://douanier-rousseau.paysdelaloire.e-lyco.fr/">lycée Douanier Rousseau</a> à
-                            Laval de 2007 à 2009, <a href="http://www.martiniere-duchere.fr/">lycée La Martinière Duchère</a> à
-                            Lyon depuis 2009</li>
-                        <li>Major de l&#39;agrégation en 2008</li>
+                        <li>Lauréat du CAPET externe économie/gestion option informatique en 2005</li>
+                        <li>Professeur en BTS Informatique de Gestion puis BTS Services Informatiques
+                            aux Organisations option SLAM : <a href="http://www.lycee-mathias.fr/">lycée Mathias</a> en
+                            2006, <a href="http://douanier-rousseau.paysdelaloire.e-lyco.fr/">lycée Douanier Rousseau</a> de
+                            2007 à 2009, <a href="http://www.martiniere-duchere.fr/">lycée La Martinière Duchère</a> depuis
+                            2009</li>
+                        <li>Major de l&#39;agrégation externe économie/gestion option informatique
+                            en 2008</li>
                         <li>Intervenant à <a href="http://polytech.univ-lyon1.fr/">Poytech Lyon</a> depuis
                             2009 et à <a href="https://www.sciencespo-lyon.fr/">Ssiences Po Lyon</a> en
                             2009</li>
                         <li>Formateur académique depuis 2014</li>
-                        <li>Membre du jury du CAPET interne depuis 2016</li>
+                        <li>Membre du jury du CAPET interne économie/gestion option informatique depuis
+                            2016</li>
                     </ul>
                     <div>&nbsp;</div>
                      <h4><strong>Ingénieur informaticien</strong>, <a href="http://www.artal.fr/">Artal</a></h4>1999-09&mdash;2006-08
                     <p>Fonctions occupées : développeur, concepteur, architecte logiciel, responsable
                         technique, chef de projet.</p>
                     <ul>
-                        <li><a href="https://www.alcatel-lucent.com/fr">Alcatel Space</a> - projets
-                            LMO2 et eCMS : test de charge utile satellite, supervision de trafic antenne</li>
-                        <li><a href="http://www.airbus.com/">Airbus</a> - projet TARDIS : gestion des
-                            données de soufflerie avion</li>
-                        <li><a href="http://www.space-airbusds.com/">Astrium</a> - projets BIBOG, SIFEC
-                            et SOC : composants du centre de contrôle du satellite Hélios II</li>
+                        <li>Pour <a href="https://www.alcatel-lucent.com/fr">Alcatel Space</a> : projets
+                            LMO2 et eCSM, test de charge utile satellite et supervision de trafic antenne</li>
+                        <li>Pour <a href="http://www.airbus.com/">Airbus</a> : projet TARDIS, gestion
+                            des données de soufflerie avion</li>
+                        <li>Pour <a href="http://www.space-airbusds.com/">Astrium</a> : projets BIBOG,
+                            SIFEC et SOC, composants du centre de contrôle du satellite Hélios II</li>
                     </ul>
                 </div>
             </section>
@@ -179,7 +182,9 @@
                         <li>École d’ingénieurs recrutant sur le concours Mines-Telecom</li>
                         <li>Spécialisations en développement objet et intelligence artificielle</li>
                         <li>Stage de fin d&#39;études effectué à l&#39;<a href="https://www.irit.fr/">IRIT</a> de
-                            Toulouse : création d&#39;une équipe de robots footballeurs auto-organisés</li>
+                            Toulouse : création d&#39;une équipe de robots footballeurs auto-organisés
+                            et participation à la <a href="http://www.robocup.org/">RoboCup</a>
+                        </li>
                     </ul>
                     <div>&nbsp;</div>
                      <h4><strong>Classes préparatoires aux grandes écoles</strong>, <a href="http://lgcorneille-lyc.spip.ac-rouen.fr">Lycée Pierre Corneille</a></h4>
@@ -188,10 +193,10 @@
                         <li>Math Sup / Math Spé M</li>
                     </ul>
                     <div>&nbsp;</div>
-                     <h4><strong>Baccalauréat C</strong>, <a href="http://ango-lyc.spip.ac-rouen.fr">Lycée Jehan Ango</a></h4>
-                     <h5>Dieppe, FR</h5>1992-09&mdash;1994-07
+                     <h4><strong>Terminale scientifique</strong>, <a href="http://ango-lyc.spip.ac-rouen.fr">Lycée Jehan Ango</a></h4>
+                     <h5>Dieppe, FR</h5>1993-09&mdash;1994-07
                     <ul>
-                        <li>Mention Bien</li>
+                        <li>Baccalauréat C obtenu avec mention Bien</li>
                     </ul>
                 </div>
             </section>
@@ -205,7 +210,7 @@
                     <div>&nbsp;</div>
                      <h4><a href="https://openclassrooms.com/courses/evoluez-vers-une-architecture-php-professionnelle"><strong>Evoluez vers une architecture PHP professionnelle</strong></a>, OpenClassrooms</h4>Published on: 2015-02
                     <div>&nbsp;</div>
-                     <h4><a href="https://www.gitbook.com/book/bpesquet/guide-developpeur-php/details"><strong>Programmation orientée objet en C#</strong></a>, GitBook</h4>Published on: 2014-02</div>
+                     <h4><a href="https://www.gitbook.com/book/bpesquet/programmation-orientee-objet-csharp/details"><strong>Programmation orientée objet en C#</strong></a>, GitBook</h4>Published on: 2014-02</div>
             </section>
         </div>
     </body>
