--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                             2009</li>
                         <li>Major de l&#39;agrégation externe économie/gestion option informatique
                             en 2008</li>
-                        <li>Intervenant à <a href="http://polytech.univ-lyon1.fr/">Poytech Lyon</a> depuis
-                            2009 et à <a href="https://www.sciencespo-lyon.fr/">Ssiences Po Lyon</a> en
+                        <li>Intervenant à <a href="http://polytech.univ-lyon1.fr/">Polytech Lyon</a> depuis
+                            2009 et à <a href="https://www.sciencespo-lyon.fr/">Sciences Po Lyon</a> en
                             2009</li>
                         <li>Formateur académique depuis 2014</li>
                         <li>Membre du jury du CAPET interne économie/gestion option informatique depuis
