--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
         <div class="container">
             <header>
                  <h1>Baptiste Pesquet</h1>
-                 <h4><span class="fa fa-fw fa-map-marker"></span>&nbsp;Lyon, FR</h4>
+                 <h4><span class="fa fa-fw fa-map-marker"></span>&nbsp;Mérignac, FR</h4>
                  <h4><span class="fa fa-fw fa-envelope"></span>&nbsp;<a href="mailto:bpesquet@gmail.com">bpesquet@gmail.com</a></h4>
                  <h4><span class="fa fa-fw fa-link"></span>&nbsp;<a href="http://bpesquet.fr">http://bpesquet.fr</a></h4>
             </header>
             <hr>
             <section class="row">
                  <h3 class="col-md-3"><span class="fa fa-fw fa-user"></span>&nbsp;A propos</h3>
-                <div class="col-md-9">Ingénieur et professeur agrégé d&#39;informatique, j&#39;enseigne en BTS
-                    SIO et en école d&#39;ingénieurs à Lyon.</div>
+                <div class="col-md-9">Ingénieur et professeur agrégé, j&#39;enseigne l&#39;informatique et ses
+                    applications à l&#39;<a href="http://www.ensc.fr">Ecole Nationale Supérieure de Cognitique</a>.</div>
             </section>
             <hr>
             <section class="row">
@@ -139,7 +139,7 @@
             <section class="row">
                  <h3 class="col-md-3"><span class="fa fa-fw fa-building"></span>&nbsp;Expérience</h3>
                 <div class="col-md-9">
-                     <h4><strong>Enseignant en informatique</strong>, Education Nationale</h4>2006-09&mdash;2016-06
+                     <h4><strong>Enseignant en informatique</strong>, Education Nationale</h4>2006-09&mdash;2016-08
                     <p>Principaux enseignements : bases de la programmation, programmation orientée
                         objet, architecture logicielle, développement Web et mobile, bases de données.</p>
                     <ul>
