--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
             <header>
                  <h1>Baptiste Pesquet</h1>
-                 <h4><span class="fa fa-fw fa-map-marker"></span>&nbsp;Mérignac, FR</h4>
+                 <h4><span class="fa fa-fw fa-map-marker"></span>&nbsp;Bordeaux, FR</h4>
                  <h4><span class="fa fa-fw fa-envelope"></span>&nbsp;<a href="mailto:bpesquet@gmail.com">bpesquet@gmail.com</a></h4>
                  <h4><span class="fa fa-fw fa-link"></span>&nbsp;<a href="http://bpesquet.fr">http://bpesquet.fr</a></h4>
             </header>
