Add ENSC experience

--- a/index.html
+++ b/index.html
@@ -139,7 +139,13 @@
             <section class="row">
                  <h3 class="col-md-3"><span class="fa fa-fw fa-building"></span>&nbsp;Expérience</h3>
                 <div class="col-md-9">
-                     <h4><strong>Enseignant en informatique</strong>, Education Nationale</h4>2006-09&mdash;2016-08
+                     <h4><strong>Enseignant en informatique</strong>, <a href="http://www.ensc.fr">Ecole Nationale Supérieure de Cognitique</a></h4>
+Depuis 2016-09
+                    <p>Principaux enseignements : bases de la programmation, programmation avancée,
+                        génie logiciel.</p>
+                    <div>&nbsp;</div>
+                     <h4><strong>Enseignant en informatique</strong>, Education Nationale</h4>
+2006-09&mdash;2016-08
                     <p>Principaux enseignements : bases de la programmation, programmation orientée
                         objet, architecture logicielle, développement Web et mobile, bases de données.</p>
                     <ul>
@@ -159,7 +165,8 @@
                             2016</li>
                     </ul>
                     <div>&nbsp;</div>
-                     <h4><strong>Ingénieur informaticien</strong>, <a href="http://www.artal.fr/">Artal</a></h4>1999-09&mdash;2006-08
+                     <h4><strong>Ingénieur informaticien</strong>, <a href="http://www.artal.fr/">Artal</a></h4>
+1999-09&mdash;2006-08
                     <p>Fonctions occupées : développeur, concepteur, architecte logiciel, responsable
                         technique, chef de projet.</p>
                     <ul>
@@ -177,7 +184,8 @@
                  <h3 class="col-md-3"><span class="fa fa-fw fa-mortar-board"></span>&nbsp;Formation</h3>
                 <div class="col-md-9">
                      <h4><strong>Ingénieur en informatique</strong>, <a href="http://www.ensiie.fr">ENSIIE</a></h4>
-                     <h5>Evry, FR</h5>1996-09&mdash;1999-07
+                     <h5>Evry, FR</h5>
+1996-09&mdash;1999-07
                     <ul>
                         <li>École d’ingénieurs recrutant sur le concours Mines-Telecom</li>
                         <li>Spécialisations en développement objet et intelligence artificielle</li>
@@ -188,13 +196,15 @@
                     </ul>
                     <div>&nbsp;</div>
                      <h4><strong>Classes préparatoires aux grandes écoles</strong>, <a href="http://lgcorneille-lyc.spip.ac-rouen.fr">Lycée Pierre Corneille</a></h4>
-                     <h5>Rouen, FR</h5>1994-09&mdash;1996-07
+                     <h5>Rouen, FR</h5>
+1994-09&mdash;1996-07
                     <ul>
                         <li>Math Sup / Math Spé M</li>
                     </ul>
                     <div>&nbsp;</div>
                      <h4><strong>Terminale scientifique</strong>, <a href="http://ango-lyc.spip.ac-rouen.fr">Lycée Jehan Ango</a></h4>
-                     <h5>Dieppe, FR</h5>1993-09&mdash;1994-07
+                     <h5>Dieppe, FR</h5>
+1993-09&mdash;1994-07
                     <ul>
                         <li>Baccalauréat C obtenu avec mention Bien</li>
                     </ul>
