Update home page and ENSC URL

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                  <h1>Baptiste Pesquet</h1>
                  <h4><span class="fa fa-fw fa-map-marker"></span>&nbsp;Bordeaux, FR</h4>
                  <h4><span class="fa fa-fw fa-envelope"></span>&nbsp;<a href="mailto:bpesquet@gmail.com">bpesquet@gmail.com</a></h4>
-                 <h4><span class="fa fa-fw fa-link"></span>&nbsp;<a href="http://bpesquet.fr">http://bpesquet.fr</a></h4>
+                 <h4><span class="fa fa-fw fa-link"></span>&nbsp;<a href="http://bpesquet.com">http://bpesquet.com</a></h4>
             </header>
             <hr>
             <section class="row">
                  <h3 class="col-md-3"><span class="fa fa-fw fa-user"></span>&nbsp;A propos</h3>
                 <div class="col-md-9">Ingénieur et professeur agrégé, j&#39;enseigne l&#39;informatique et ses
-                    applications à l&#39;<a href="http://www.ensc.fr">Ecole Nationale Supérieure de Cognitique</a>.</div>
+                    applications à l&#39;<a href="https://ensc.bordeaux-inp.fr/fr">Ecole Nationale Supérieure de Cognitique</a>.</div>
             </section>
             <hr>
             <section class="row">
@@ -139,13 +139,11 @@
             <section class="row">
                  <h3 class="col-md-3"><span class="fa fa-fw fa-building"></span>&nbsp;Expérience</h3>
                 <div class="col-md-9">
-                     <h4><strong>Enseignant en informatique</strong>, <a href="http://www.ensc.fr">Ecole Nationale Supérieure de Cognitique</a></h4>
-Depuis 2016-09
+                     <h4><strong>Enseignant en informatique</strong>, <a href="https://ensc.bordeaux-inp.fr/fr">Ecole Nationale Supérieure de Cognitique</a></h4>2016-09&mdash;2017-06
                     <p>Principaux enseignements : bases de la programmation, programmation avancée,
                         génie logiciel.</p>
                     <div>&nbsp;</div>
-                     <h4><strong>Enseignant en informatique</strong>, Education Nationale</h4>
-2006-09&mdash;2016-08
+                     <h4><strong>Enseignant en informatique</strong>, Education Nationale</h4>2006-09&mdash;2016-08
                     <p>Principaux enseignements : bases de la programmation, programmation orientée
                         objet, architecture logicielle, développement Web et mobile, bases de données.</p>
                     <ul>
@@ -165,8 +163,7 @@ Depuis 2016-09
                             2016</li>
                     </ul>
                     <div>&nbsp;</div>
-                     <h4><strong>Ingénieur informaticien</strong>, <a href="http://www.artal.fr/">Artal</a></h4>
-1999-09&mdash;2006-08
+                     <h4><strong>Ingénieur informaticien</strong>, <a href="http://www.artal.fr/">Artal</a></h4>1999-09&mdash;2006-08
                     <p>Fonctions occupées : développeur, concepteur, architecte logiciel, responsable
                         technique, chef de projet.</p>
                     <ul>
@@ -184,8 +181,7 @@ Depuis 2016-09
                  <h3 class="col-md-3"><span class="fa fa-fw fa-mortar-board"></span>&nbsp;Formation</h3>
                 <div class="col-md-9">
                      <h4><strong>Ingénieur en informatique</strong>, <a href="http://www.ensiie.fr">ENSIIE</a></h4>
-                     <h5>Evry, FR</h5>
-1996-09&mdash;1999-07
+                     <h5>Evry, FR</h5>1996-09&mdash;1999-07
                     <ul>
                         <li>École d’ingénieurs recrutant sur le concours Mines-Telecom</li>
                         <li>Spécialisations en développement objet et intelligence artificielle</li>
@@ -196,15 +192,13 @@ Depuis 2016-09
                     </ul>
                     <div>&nbsp;</div>
                      <h4><strong>Classes préparatoires aux grandes écoles</strong>, <a href="http://lgcorneille-lyc.spip.ac-rouen.fr">Lycée Pierre Corneille</a></h4>
-                     <h5>Rouen, FR</h5>
-1994-09&mdash;1996-07
+                     <h5>Rouen, FR</h5>1994-09&mdash;1996-07
                     <ul>
                         <li>Math Sup / Math Spé M</li>
                     </ul>
                     <div>&nbsp;</div>
                      <h4><strong>Terminale scientifique</strong>, <a href="http://ango-lyc.spip.ac-rouen.fr">Lycée Jehan Ango</a></h4>
-                     <h5>Dieppe, FR</h5>
-1993-09&mdash;1994-07
+                     <h5>Dieppe, FR</h5>1993-09&mdash;1994-07
                     <ul>
                         <li>Baccalauréat C obtenu avec mention Bien</li>
                     </ul>
